Fixes issue where margin is too large in filled boxes to title.

--- a/source/sass/component/box/_filled.scss
+++ b/source/sass/component/box/_filled.scss
@@ -44,7 +44,9 @@
 }
 
 .box-filled {
-    .box-title + .box-content {
+    .box-title + ul,
+    .box-title + div,
+    .box-title + p {
         padding-top: $content-gutter;
     }
 }
